# LEMNG

./: .kateconfig  CMakeLists.txt  Doxyfile  README.md
include/: lemng.h
pansargryning/: build_pgn_resgen.sh  build_ref_res_gen.sh  pansargryning.py  reference_results_generator.cpp
ref_tool/: build_ref_tool.sh  dbg_run_ref_tool.sh  efg_plot.gp  json_input_processor.cpp  json_input_processor.h  profile_run_ref_tool.sh  ref_tool.cpp  ref_tool_glob.sh  run_ref_tool.sh  run_ref_tool_valgrind.sh
ref_tool/jsonloader/: constituents_json_ldr.c  constituents_json_ldr.h  inputreader.cpp  inputreader.h
reference_data/: formlibcd_rflu.json  formlibcddmbcd_rflu.json  formlixs_analyte.json  formlixs_analyte_inv.json  formlixs_analyte_sys.json  formna_k.json  oscillating.json  phosphorical_empty.json  trtrbcd_snap_sibu.json
src/: base_types.cpp  base_types.h  calculator_common.cpp  calculator_common.h  calculator_linear.cpp  calculator_linear.h  calculator_matrices.cpp  calculator_matrices.h  calculator_nonlinear.cpp  calculator_nonlinear.h  calculator_types.cpp  calculator_types.h  efg_plotter.cpp  helpers.cpp  helpers.h  lemng.cpp  lemng_config.h.in  lemng_p.h  results_maker.cpp  results_maker.h
src/barsarkagang/: barsarkagang_tests.h  formli_nak.cpp  nacl_empty.cpp
src/tests/: barsarkagang_tests.h  benzoiclibcd_empty_is.cpp  benzoiclibcd_empty_nois.cpp  formlibcd_rflu.cpp_is.cpp  formlibcd_rflu.cpp_nois.cpp  formlibcd_rflu_is.cpp  formlibcd_rflu_nois.cpp  formlibcddmbcd_rflu_is.cpp  formlibcddmbcd_rflu_nois.cpp  formlixs_analyte_inv_is.cpp  formlixs_analyte_inv_nois.cpp  formlixs_analyte_is.cpp  formlixs_analyte_nois.cpp  formlixs_analyte_sys_is.cpp  formlixs_analyte_sys_nois.cpp  formna_k_is.cpp  formna_k_nois.cpp  nacl_empty_is.cpp  nacl_empty_nois.cpp  oscillating_is.cpp  oscillating_nois.cpp  phosphorical_empty_is.cpp  phosphorical_empty_nois.cpp  phosphorical_is.cpp  phosphorical_nois.cpp  trtrbcd_snap_sibu_is.cpp  trtrbcd_snap_sibu_nois.cpp
src/tracing/: LICENSE_EXCEPTION  echmet_tracer.h  lemng_tracer.h  lemng_tracer_impl.h
src/tracing/internal/: tracer_base.h  tracer_types.h  tracer_user.h  tracer_util.h
test_generation/: build_ref_res_gen.sh  make_tests.sh  reference_results_generator.cpp  test_generator.py
testdata/: benzoic_alone.json  benzoic_alone_v2.json  benzoic_li_an_nocpx.json  benzoic_li_bCD.json  benzoic_li_bCD_an.json  benzoic_li_bCD_an_sel.json  benzoic_li_bCD_an_sel_an2.json  benzoic_li_nocpx._hidist.json  benzoic_li_nocpx.json  benzoic_li_nocpx_hidist.json  nacl_empty.json  oscillating.json  phosphoric_al_nocpx.json  phosphoric_li_nocpx.json  phosphoric_na_nocpx.json  pzychomix.json  pzychomix_mod.json
